Fixed karaf4 failing on java11 (#756)